--- a/src/app/applications/datatarget/datatarget-table/datatarget-table.component.html
+++ b/src/app/applications/datatarget/datatarget-table/datatarget-table.component.html
@@ -51,7 +51,7 @@
           <div class="dropdown">
             <a [attr.aria-label]="'DATATARGET-TABLE-ROW.SHOW-OPTIONS' | translate" aria-expanded="false"
                class="applicationRow__edit dropdown-toggle"
-               data-toggle="dropdown"
+               data-bs-toggle="dropdown"
                href="#" id="tableRowDropdown-{{ element.id }}"
                role="button"></a>
             <ul attr.aria-labelledby="tableRowDropdown-{{ element.id }}" class="dropdown-menu dropdown-menu--table">
