--- a/src/app/device-model/device-model-table/device-model-table.component.html
+++ b/src/app/device-model/device-model-table/device-model-table.component.html
@@ -37,7 +37,7 @@
               [attr.aria-label]="'DEVICE-MODEL.SHOW-OPTIONS' | translate"
               aria-expanded="false"
               class="applicationRow__edit dropdown-toggle"
-              data-toggle="dropdown"
+              data-bs-toggle="dropdown"
               href="#"
               id="tableRowDropdown-{{ element.id }}"
               role="button"
