--- a/src/app/applications/bulk-import/bulk-import.component.html
+++ b/src/app/applications/bulk-import/bulk-import.component.html
@@ -26,7 +26,7 @@
         aria-expanded="false"
         aria-haspopup="true"
         class="btn btn-primary dropdown-toggle"
-        data-toggle="dropdown"
+        data-bs-toggle="dropdown"
         type="button"
       >
         {{ "APPLICATION.BULK.DOWNLOAD" | translate }} <span class="caret"></span>
