--- a/src/app/applications/multicast/multicast-table/multicast-table.component.html
+++ b/src/app/applications/multicast/multicast-table/multicast-table.component.html
@@ -46,7 +46,7 @@
               [attr.aria-label]="'MULTICAST-TABLE-ROW.SHOW-OPTIONS' | translate"
               aria-expanded="false"
               class="applicationRow__edit dropdown-toggle"
-              data-toggle="dropdown"
+              data-bs-toggle="dropdown"
               href="#"
               id="tableRowDropdown-{{ element.id }}"
               role="button"
