--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -113,50 +113,53 @@
         </select>
       </div>
     </div>
-  } @if (isOrganizationApplicationPermission()) {
-  <div class="form-group mt-3 col-12">
-    <label class="form-label" for="name">{{ "PERMISSION.EDIT.APPS" | translate }}</label>
-    <div class="col-12">
-      <mat-select
-        #multiSelect
-        [(value)]="permission.applicationIds"
-        [compareWith]="compare"
-        [formControl]="applicationMultiCtrl"
-        [multiple]="true"
-        class="form-control"
-        id="applicationIds"
-        name="applicationIds"
-        panelClass="overflow-x-hidden"
-      >
-        <app-mat-select-search
-          [formControl]="applicationMultiFilterCtrl"
-          [initialValues]="this.permission.applicationIds"
-        ></app-mat-select-search>
-        @for (app of filteredApplicationsMulti | async; track app) {
-          <mat-option [value]="app.id">
-            {{ app.name }}
-          </mat-option>
-        }
-      </mat-select>
-    </div>
-  </div>
-} @if (isReadOrWrite()) {
-  <div>
+  }
+  @if (isOrganizationApplicationPermission()) {
     <div class="form-group mt-3 col-12">
-      <label class="form-label" for="name">{{ "PERMISSION.EDIT.ADD-APPLICATION-AUTOMATIC" | translate }}</label>
-      <div class="row">
-        <mat-slide-toggle
-          [(ngModel)]="permission.automaticallyAddNewApplications"
-          id="automaticallyAddNewApplications"
-          name="automaticallyAddNewApplications"
+      <label class="form-label" for="name">{{ "PERMISSION.EDIT.APPS" | translate }}</label>
+      <div class="col-12">
+        <mat-select
+          #multiSelect
+          [(value)]="permission.applicationIds"
+          [compareWith]="compare"
+          [formControl]="applicationMultiCtrl"
+          [multiple]="true"
+          class="form-control"
+          id="applicationIds"
+          name="applicationIds"
+          panelClass="overflow-x-hidden"
         >
-          {{ "PERMISSION.EDIT.ADD-APPLICATION-ON-CREATE" | translate }}
-        </mat-slide-toggle
-        >
+          <app-mat-select-search
+            [formControl]="applicationMultiFilterCtrl"
+            [initialValues]="this.permission.applicationIds"
+          ></app-mat-select-search>
+          @for (app of filteredApplicationsMulti | async; track app) {
+            <mat-option [value]="app.id">
+              {{ app.name }}
+            </mat-option>
+          }
+        </mat-select>
       </div>
     </div>
-  </div>
-}
+  }
+  @if (isReadOrWrite()) {
+    <div>
+      <div class="form-group mt-3 col-12">
+        <label class="form-label" for="name">{{ "PERMISSION.EDIT.ADD-APPLICATION-AUTOMATIC" | translate }}</label>
+        <div class="row">
+          <mat-slide-toggle
+            [(ngModel)]="permission.automaticallyAddNewApplications"
+            color=""
+            id="automaticallyAddNewApplications"
+            name="automaticallyAddNewApplications"
+          >
+            {{ "PERMISSION.EDIT.ADD-APPLICATION-ON-CREATE" | translate }}
+          </mat-slide-toggle
+          >
+        </div>
+      </div>
+    </div>
+  }
 
   <div class="form-group mt-5">
     <button (click)="routeBack()" class="btn btn-secondary" type="button">{{ "GEN.CANCEL" | translate }}</button>
