Changes to texts for oddk

--- a/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
+++ b/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
@@ -366,6 +366,14 @@
             href="https://datavejviser.dk/om-datavejviser#vilkaar-for-anvendelse-af-data-og-datasaetbeskrivelser-i-datavejviseren">
             Datavejviser
           </a>
+          <fa-icon
+            [icon]="faQuestionCircle"
+            [matTooltip]="'OPENDATADK.QUESTION.DATA-DIRECTORY-DESCRIPTION-INFO' | translate"
+            class="form-info-icon"
+            matTooltipHideDelay="2000"
+            matTooltipPosition="above"
+            matTooltipShowDelay="600"
+          />
         </p>
       </mat-checkbox>
     </div>
